Added Meme Text fields with appropriate reset/use functionality Added View movement to prevent keyboard from covering text fields Added camera and photo library import functionality Added share final meme functionality Added reset button functionality

--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Needed in order to use the camera to capture a photo to meme&quot;</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&quot;Needed to select a photo from your library to meme&quot;</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>&quot;Needed to save your meme to your photo library&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
