--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Impact.ttf</string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>&quot;Needed in order to use the camera to capture a photo to meme&quot;</string>
 	<key>NSPhotoLibraryUsageDescription</key>
