--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Info.plist
@@ -2,18 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Impact.ttf</string>
-	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>&quot;Needed in order to use the camera to capture a photo to meme&quot;</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>&quot;Needed to select a photo from your library to meme&quot;</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>&quot;Needed to save your meme to your photo library&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>MemeMe1.0</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>"Needed in order to use the camera to capture a photo to meme"</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>"Needed to save your meme to your photo library"</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>"Needed to select a photo from your library to meme"</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Impact.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
